[metadata]
name = django-visitor
version = 0.0.3
description = Django visitor. Store stuff about your websites visitor here.
long_description = file: README.rst
url = https://github.com/KieranCNZTech/django-visitor.git
author = Kieran Findlay
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django2 & Django3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
